--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel index.html shuffler.html",
+    "build": "parcel build index.html shuffler.html"
   },
   "dependencies": {
     "file-saver": "^2.0.2",
