--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file-saver": "^2.0.2",
     "global": "^4.4.0",
     "html-to-image": "^0.1.1",
+    "js-easing-functions": "^1.0.3",
     "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {
